k8s/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mlops-docs
  namespace: mlops-docs
  labels:
    app: mlops-docs
  annotations:
    prometheus.io/scrape: "true"
    prometheus.io/port: "3000"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: mlops-docs
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
